tests/paczka2/big_fuzzy/82641747.err
Error in line 1: N5pJf0CQ A414 15,4
Error in line 3: Vrvj A837 36,1
Error in line 2: N5pJf0CQ A388 62,5
Error in line 16: Vrvj A414 87,1
Error in line 46: Vrvj A414 29,1
Error in line 48: Vrvj A837 56,3
Error in line 65: 'aX8suIBE5G A388 6,1
Error in line 62: Muo0 A296 30,6
Error in line 71: Vrvj A837 23,2
Error in line 81: Muo0 A837 28,4
Error in line 82: Muo0 A296 88,9
Error in line 99: A837 A296 23,1
Error in line 97: Vrvj A388 217,1
Error in line 77: N5pJf0CQ A837 322,0
Error in line 106: mRF A837 83,7
Error in line 95: 2aX8suIBE5G A388 41,7
Error in line 98: vXk A837 130,7
Error in line 138: A837 A296 65,6
Error in line 143: Muo0 A837 14,2
Error in line 149: vXk A388 42,9
Error in line 150: Vrvj A296 47,4
Error in line 154: vXk A414 85,8
Error in line 173: vXk A837 62,2
Error in line 170: N5pJf0CQ A296 68,8
Error in line 177: Vrvj A388 81,2
Error in line 182: 2aX8suIBE5G A837 38,9
Error in line 172: Muo0 A296 95,1
Error in line 197: Muo0 A414 14,6
Error in line 205: vXk A837 82,0
Error in line 198: A837 A296 44,3
Error in line 219: 2aX8suIBE5G A388 11,3
Error in line 222: Muo0 A388 75,6
Error in line 234: Muo0 A296 85,1
Error in line 239: Vrvj A837 1,1
Error in line 245: vXk A388 88,1
